--- a/EC2 Module/.gitignore
+++ b/EC2 Module/.gitignore
@@ -9,3 +9,32 @@ terraform.tfvars
 ~/.aws/credentials
 # Local files
 *.backup
+# Ignore Terraform state files
+*.tfstate
+*.tfstate.backup
+
+# Ignore Terraform crash logs
+crash.log
+
+# Ignore override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore Terraform plugin directories
+.terraform/
+
+# Ignore sensitive variable files
+*.tfvars
+*.tfvars.json
+
+# Ignore backup files
+*.backup
+
+# Ignore any local environment files
+.terraform.lock.hcl
